# stackoverflow-tags-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
src/api/: main.py
src/api/lib/: clean_html.py  lemmatize.py  nltk_utils.py  path_utils.py  process_text.py  remove_stopwords.py  tokenize.py
src/streamlit/: app.py
tests/: test_api.py
