[project]
name = "stackoverflow-tags-ai"
version = "0.1.0"
description = "Suggest tags for stackoverflow questions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "nltk>=3.8.1",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
]
