[project]
name = "stackoverflow-tags-ai"
version = "0.1.0"
description = "Suggest tags for stackoverflow questions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn==1.6.1",
    "nltk>=3.8.1",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "streamlit>=1.46.1",
    "requests>=2.32.4",
]

[project.optional-dependencies]
# Dependencies required only for running the test suite
tests = [
    "pytest>=7.4",
    "httpx>=0.27",
    "fastapi[all]>=0.116.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
